# QT

./: README.md
ImportantExample/2Pnotes/: 2Pnotes  Makefile
ImportantExample/360SafeDemo/: user.ini
ImportantExample/QFramer/: Makefile
Linux/include_star_files/: include_star_files.pro
Linux/libs_boost_files/: libs_boost_files.pro
Linux/libs_opencv_files/: libs_opencv_files.pro
Linux/libs_root_files/: libs_root_files.pro
Linux/project/: Makefile  project  project.cpp  project.h
Project/2048/: CMakeLists.txt
Project/2048/src/: CMakeLists.txt  GameWidget.cpp  GameWidget.h  widget.cpp  widget.h
Project/AbsoluteLayout/: Layout.pro  layout.cpp  layout.h  main.cpp
Project/CMake/: CMakeLists.txt
Project/Coalescence/: Coalescence.pro  jglobal.h  mainwindow.ui  test.pro
Project/CoalescenceBackup/: Coalescence.pro  result.root
Project/CoordinateSetter/: CoordinateSetter.pro  coordinatesetter.cpp  coordinatesetter.h  main.cpp
Project/FindDialog/: CMakeLists.txt
Project/FlowChartSymbolPicker/: FlowChartSymbolPicker.pro  flowchartsymbolpicker.cpp  flowchartsymbolpicker.h  main.cpp  resources.qrc
Project/GoToCellDialog/: CMakeLists.txt
Project/GridLayout/: GridLayout.pro  mainwindow.ui
Project/Layout/: Layout.pro  findfiledialog.cpp  findfiledialog.h
Project/ListWidget/: CMakeLists.txt
Project/ListWidget/src/: CMakeLists.txt  flowchartsymbolpicker.cpp  main.cpp
Project/MainWindow/: MainWindow.pro  cell.cpp  cell.h  finddialog.cpp  finddialog.h  gotocelldialog.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  (+3 more)
SelfProject/: TODO.md
(+601 files in other folders)
